debpool (0.3.10) experimental; urgency=low

  * Handle conffile renaming as suggested in
    http://wiki.debian.org/DpkgConffileHandling.

 -- Andres Mejia <mcitadel@gmail.com>  Fri, 17 Oct 2008 12:50:08 -0400

debpool (0.3.9) experimental; urgency=low

  * Allow binNMUs.
    + We basically only obsolete packages of the particular architecture when
      we're uploading.

 -- Andres Mejia <mcitadel@gmail.com>  Fri, 17 Oct 2008 02:47:03 -0400

debpool (0.3.8) experimental; urgency=low

  * Use Compress::Zlib and Compress::Bzip2 to create bzip2 and gzip Packages and
    Sources files.
    + Adding Depends of libcompress-bzip2-perl.
    + (Closes: #502454)
  * Drop liblinux-inotify2-perl to Recommends. It is not necessary to use
    inotify and this would allow users of non-Linux ports of debian to use
    debpool.
  * Bumped libproc-daemon-perl up to depends.
    + Changed debpool to not check for existence of Proc::Daemon, since it will
      now be installed by default.
  * Write an entry about dependencies in the README.Debian file.
  * Rename config file from Config.pm to debpoolrc.

 -- Andres Mejia <mcitadel@gmail.com>  Thu, 16 Oct 2008 16:55:37 -0400

debpool (0.3.7) experimental; urgency=low

  * Removed unnecessary comments from debian/rules.
  * Removed libcompress-zlib-perl from Recommends. It is not used.
  * Removed libdigest-sha-perl from Recommends as it is provided in perl-5.10.0.
  * Rewrote (slightly) package description.
  * Updated TODO file.

 -- Andres Mejia <mcitadel@gmail.com>  Thu, 16 Oct 2008 12:29:13 -0400

debpool (0.3.6) experimental; urgency=low

  [ Hilko Bengen ]
  * Performed some code cleanups avoid the most serious Perl::Critic
    warnings
  * Changed build process to use ExtUtils::MakeMaker
    - Install modules into VENDORPREFIX.
    - Use POD for the debpool manpage.

  [ Andres Mejia ]
  * New maintainer (Closes: #465937)
  * Added myself and Magnus Holmgren as an uploader.